# Ogitor-Facade-Plugins

./: CMakeLists.txt  README
Plugins/: CMakeLists.txt
Plugins/Physics/: CMakeLists.txt  Fysics.cpp  Fysics.h
Plugins/Player/: CMakeLists.txt  FaPlayer.cpp  FaPlayer.h
Plugins/Sound/: CMakeLists.txt  FaSound.cpp  FaSound.h
